--- a/apps/web/src/layout/ThemeToggle.astro
+++ b/apps/web/src/layout/ThemeToggle.astro
@@ -1,5 +1,5 @@
 ---
-// Theme toggle component - no server-side imports needed
+import { DarkThemeIcon, LightThemeIcon } from '@repo/icons';
 ---
 
 <button
@@ -9,35 +9,10 @@
     aria-label='Cambiar tema'
 >
     <!-- Sun icon for dark mode (show when in dark mode) -->
-    <svg
-        xmlns='http://www.w3.org/2000/svg'
-        fill='none'
-        viewBox='0 0 24 24'
-        stroke='currentColor'
-        class='w-5 h-5 dark:block hidden'
-    >
-        <path
-            stroke-linecap='round'
-            stroke-linejoin='round'
-            stroke-width='2'
-            d='M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z'
-        ></path>
-    </svg>
+    <LightThemeIcon className='w-5 h-5 dark:block hidden' />
 
     <!-- Moon icon for light mode (show when in light mode) -->
-    <svg
-        xmlns='http://www.w3.org/2000/svg'
-        fill='none'
-        viewBox='0 0 24 24'
-        stroke='currentColor'
-        class='w-5 h-5 dark:hidden block'
-    >
-        <path
-            stroke-linecap='round'
-            stroke-linejoin='round'
-            stroke-width='2'
-            d='M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z'></path>
-    </svg>
+    <DarkThemeIcon className='w-5 h-5 dark:hidden block' />
 </button>
 
 <script>
