fix: resolve TypeScript errors in web app components
- Fix type issues in IconSearchAndFilter component
- Update icons page for better type safety

--- a/apps/web/src/pages/icons.astro
+++ b/apps/web/src/pages/icons.astro
@@ -26,14 +26,17 @@ const iconCategories = [
         icons: [
             { name: 'AccommodationIcon' },
             { name: 'ContentIcon' },
+            { name: 'CouponsIcon' },
             { name: 'DestinationIcon' },
             { name: 'EventIcon' },
             { name: 'EventLocationIcon' },
             { name: 'EventOrganizerIcon' },
+            { name: 'OffersIcon' },
             { name: 'PermissionIcon' },
             { name: 'PostIcon' },
             { name: 'PostSponsorIcon' },
             { name: 'PostSponsorshipIcon' },
+            { name: 'PromotionsIcon' },
         ],
     },
     {
@@ -41,11 +44,20 @@ const iconCategories = [
         description: 'Iconos para el panel de administración',
         icons: [
             { name: 'AnalyticsIcon' },
+            { name: 'BackupIcon' },
             { name: 'DashboardIcon' },
             { name: 'ListIcon' },
+            { name: 'LogsIcon' },
+            { name: 'MetricsIcon' },
+            { name: 'MonitoringIcon' },
+            { name: 'PermissionsIcon' },
+            { name: 'ReportsIcon' },
+            { name: 'RolesIcon' },
             { name: 'SectionIcon' },
+            { name: 'StatisticsIcon' },
             { name: 'TagIcon' },
             { name: 'TagsIcon' },
+            { name: 'UsersManagementIcon' },
             { name: 'ViewAllIcon' },
         ],
     },
@@ -54,45 +66,83 @@ const iconCategories = [
         description: 'Iconos para amenities de alojamientos',
         icons: [
             { name: 'AirConditioningIcon' },
+            { name: 'BabyMonitorIcon' },
             { name: 'BalconyIcon' },
+            { name: 'BarServiceIcon' },
             { name: 'BbqGrillIcon' },
+            { name: 'BeachEquipmentIcon' },
             { name: 'BedLinensIcon' },
             { name: 'BicyclesIcon' },
             { name: 'BlackoutCurtainsIcon' },
+            { name: 'BoardGamesIcon' },
+            { name: 'BooksAndMagazinesIcon' },
             { name: 'BreakfastIcon' },
+            { name: 'BroomIcon' },
+            { name: 'ClockIcon' },
             { name: 'CoffeeMakerIcon' },
+            { name: 'CoveredGrillAreaIcon' },
+            { name: 'CoworkingSpaceIcon' },
+            { name: 'CoveredParkingIcon' },
+            { name: 'DailyCleaningIcon' },
+            { name: 'DockAccessIcon' },
+            { name: 'DoubleGlazingIcon' },
             { name: 'ElectricBlanketIcon' },
             { name: 'ElectricFireplaceIcon' },
             { name: 'ElevatorIcon' },
             { name: 'FanIcon' },
+            { name: 'FireExtinguisherIcon' },
             { name: 'FireplaceIcon' },
+            { name: 'FirstAidKitIcon' },
+            { name: 'FishingEquipmentIcon' },
+            { name: 'FullBoardIcon' },
             { name: 'GymIcon' },
             { name: 'HairDryerIcon' },
             { name: 'HeatingIcon' },
+            { name: 'HighChairIcon' },
             { name: 'InternationalAdaptersIcon' },
             { name: 'JacuzziIcon' },
+            { name: 'KayakRentalIcon' },
             { name: 'KettleIcon' },
+            { name: 'KidsGamesIcon' },
             { name: 'KitchenIcon' },
+            { name: 'LaundryServiceIcon' },
+            { name: 'LuggageStorageIcon' },
             { name: 'MicrowaveIcon' },
             { name: 'MiniBarIcon' },
+            { name: 'MotorhomeParkingIcon' },
+            { name: 'OutdoorLightingIcon' },
             { name: 'ParkingIcon' },
+            { name: 'PetAllowedIcon' },
             { name: 'PlaygroundIcon' },
             { name: 'PoolIcon' },
+            { name: 'PrivateViewpointIcon' },
+            { name: 'Reception24hIcon' },
             { name: 'RefrigeratorIcon' },
+            { name: 'RelaxationAreaIcon' },
+            { name: 'RoomServiceIcon' },
             { name: 'RoomTvIcon' },
             { name: 'SafeIcon' },
+            { name: 'SecureParkingIcon' },
             { name: 'SharedKitchenIcon' },
+            { name: 'ShoppingServiceIcon' },
             { name: 'SmartTvIcon' },
+            { name: 'SmokeDetectorIcon' },
             { name: 'SoapDispenserIcon' },
+            { name: 'SolarShowersIcon' },
+            { name: 'SpaServicesIcon' },
             { name: 'StoveIcon' },
             { name: 'TerraceIcon' },
             { name: 'TowelsIcon' },
+            { name: 'TransferServiceIcon' },
             { name: 'TvIcon' },
             { name: 'UnderfloorHeatingIcon' },
             { name: 'UtensilsIcon' },
+            { name: 'WalkingTrailIcon' },
             { name: 'WasherIcon' },
             { name: 'WaterDispenserIcon' },
             { name: 'WifiIcon' },
+            { name: 'WorkshopSpaceIcon' },
+            { name: 'YogaMeditationIcon' },
             // Outdoor amenities
             { name: 'BeachUmbrellaIcon' },
             { name: 'HeatedPoolIcon' },
@@ -103,26 +153,72 @@ const iconCategories = [
             { name: 'RiverViewIcon' },
             { name: 'SaunaIcon' },
             { name: 'SharedPatioIcon' },
+            { name: 'ShirtIcon' },
         ],
     },
     {
         title: 'Características',
         description: 'Iconos para características de propiedades',
         icons: [
+            { name: 'AccessibilityFriendlyIcon' },
+            { name: 'AdultsOnlyIcon' },
+            { name: 'AnimalActivitiesIcon' },
+            { name: 'AnimalPenIcon' },
+            { name: 'BilingualServiceIcon' },
+            { name: 'CampingAreaIcon' },
+            { name: 'CampingSectorIcon' },
             { name: 'CentralAreaIcon' },
+            { name: 'CouplesFriendlyIcon' },
+            { name: 'CoveredGalleryIcon' },
+            { name: 'DairyProductionIcon' },
+            { name: 'DigitalDetoxIcon' },
             { name: 'EcologicalIcon' },
+            { name: 'EcoConstructionIcon' },
+            { name: 'EntirePropertyIcon' },
             { name: 'FamilySuitableIcon' },
+            { name: 'FirePitAreaIcon' },
+            { name: 'GravelAccessIcon' },
+            { name: 'GroupFriendlyIcon' },
+            { name: 'InternalParkingIcon' },
+            { name: 'IsolatedLocationIcon' },
+            { name: 'LGBTQFriendlyIcon' },
+            { name: 'LocalCraftsIcon' },
+            { name: 'MinimalistStyleIcon' },
+            { name: 'MinimumStayIcon' },
             { name: 'ModernStyleIcon' },
             { name: 'NaturalEnvironmentIcon' },
+            { name: 'NoCellSignalIcon' },
+            { name: 'OrganizedActivitiesIcon' },
+            { name: 'OwnProductionIcon' },
             { name: 'PanoramicViewIcon' },
             { name: 'PavedAccessIcon' },
+            { name: 'PerimeterFenceIcon' },
+            { name: 'PerimeterLightingIcon' },
+            { name: 'PetAreaIcon' },
             { name: 'PetFriendlyIcon' },
+            { name: 'PlasticFreeIcon' },
+            { name: 'PrivateGrillIcon' },
+            { name: 'ProfessionalStaffIcon' },
+            { name: 'QuietEnvironmentIcon' },
+            { name: 'QuietZoneIcon' },
+            { name: 'RainwaterHarvestingIcon' },
             { name: 'RenewableEnergyIcon' },
+            { name: 'ResidentialAreaIcon' },
             { name: 'RiverFrontIcon' },
+            { name: 'RoomRentalIcon' },
+            { name: 'RuralActivitiesIcon' },
             { name: 'RuralAreaIcon' },
             { name: 'RusticStyleIcon' },
+            { name: 'Security24hIcon' },
+            { name: 'SelfCheckInIcon' },
+            { name: 'SeniorFriendlyIcon' },
+            { name: 'SharedSpaceIcon' },
             { name: 'SmartHomeIcon' },
+            { name: 'SmokingAreaIcon' },
             { name: 'SpaFrontIcon' },
+            { name: 'ThemedRoomsIcon' },
+            { name: 'TouristInfoIcon' },
+            { name: 'WasteRecyclingIcon' },
         ],
     },
     {
@@ -131,26 +227,91 @@ const iconCategories = [
         icons: [
             { name: 'AgriculturalCenterIcon' },
             { name: 'AmphitheaterIcon' },
+            { name: 'ArchaeologicalSiteIcon' },
+            { name: 'ArtisanalCheeseIcon' },
+            { name: 'AthleticsTrackIcon' },
             { name: 'AviariumIcon' },
+            { name: 'BallroomIcon' },
             { name: 'BeachIcon' },
+            { name: 'BirdWatchingIcon' },
+            { name: 'CarnavalHeadquartersIcon' },
+            { name: 'CarnavalMuseumIcon' },
+            { name: 'CarnavalVenueIcon' },
+            { name: 'CarnavalWorkshopIcon' },
             { name: 'CasinoIcon' },
             { name: 'CathedralIcon' },
+            { name: 'ChildrensPlaygroundIcon' },
+            { name: 'CitrusPlantationIcon' },
+            { name: 'CitrusTourIcon' },
+            { name: 'ColonialChurchIcon' },
+            { name: 'CommercialZoneIcon' },
+            { name: 'CraftsFairIcon' },
+            { name: 'CreoleInnIcon' },
             { name: 'CulturalCenterIcon' },
+            { name: 'DeltaExplorerIcon' },
             { name: 'EducationalFarmIcon' },
+            { name: 'EventCenterIcon' },
+            { name: 'FamilyThermalIcon' },
+            { name: 'FestivalPlazaIcon' },
+            { name: 'FishingPierIcon' },
+            { name: 'GamingPlazaIcon' },
+            { name: 'GastronomicMarketIcon' },
+            { name: 'GovernmentBuildingIcon' },
+            { name: 'HistoricHouseIcon' },
+            { name: 'HistoricMonumentIcon' },
+            { name: 'HistoricMuseumIcon' },
+            { name: 'HistoricPalaceIcon' },
+            { name: 'InterpretationCenterIcon' },
+            { name: 'LocalDiscoIcon' },
+            { name: 'MainSquareIcon' },
+            { name: 'MultisportComplexIcon' },
+            { name: 'MunicipalBeachIcon' },
+            { name: 'MunicipalCinemaIcon' },
+            { name: 'MunicipalGymIcon' },
+            { name: 'MunicipalParkIcon' },
+            { name: 'MunicipalStadiumIcon' },
             { name: 'MuseumIcon' },
+            { name: 'NaturalReserveIcon' },
+            { name: 'NaturalSpaIcon' },
+            { name: 'NavigableChannelIcon' },
             { name: 'NatureReserveIcon' },
             { name: 'ParkIcon' },
+            { name: 'PedestrianWalkwayIcon' },
+            { name: 'ProtectedAreaIcon' },
+            { name: 'RecreationalBoatingIcon' },
+            { name: 'RegionalMuseumIcon' },
             { name: 'RestaurantIcon' },
+            { name: 'RiverBeachIcon' },
+            { name: 'RiverKayakIcon' },
             { name: 'ShoppingCenterIcon' },
+            { name: 'SoccerFieldIcon' },
+            { name: 'SportFishingIcon' },
             { name: 'SportsComplexIcon' },
+            { name: 'SportsCenterIcon' },
+            { name: 'ThermalAquaParkIcon' },
+            { name: 'ThermalPoolsIcon' },
             { name: 'ThermalSpaIcon' },
+            { name: 'TouristPierIcon' },
+            { name: 'TouristRanchIcon' },
+            { name: 'TraditionalBakeryIcon' },
+            { name: 'TraditionalGrillIcon' },
+            { name: 'TraditionalPubIcon' },
+            { name: 'WellnessCenterIcon' },
             { name: 'WetlandsIcon' },
         ],
     },
     {
         title: 'Comunicación',
-        description: 'Iconos para medios de comunicación',
-        icons: [{ name: 'ChatIcon' }, { name: 'ContactoIcon' }, { name: 'LanguageIcon' }, { name: 'PhoneIcon' }],
+        description: 'Iconos para comunicación y marketing',
+        icons: [
+            { name: 'ChatIcon' },
+            { name: 'ContactoIcon' },
+            { name: 'EmailIcon' },
+            { name: 'LanguageIcon' },
+            { name: 'NewsletterIcon' },
+            { name: 'PhoneIcon' },
+            { name: 'SmsIcon' },
+        ],
     },
     {
         title: 'Redes Sociales',
@@ -160,22 +321,78 @@ const iconCategories = [
     {
         title: 'Acciones',
         description: 'Iconos para acciones del usuario',
-        icons: [{ name: 'AskToAiIcon' }, { name: 'CopyIcon' }, { name: 'FaqsIcon' }],
+        icons: [
+            { name: 'AskToAiIcon' },
+            { name: 'CancelIcon' },
+            { name: 'ConfirmIcon' },
+            { name: 'CopyIcon' },
+            { name: 'DeleteIcon' },
+            { name: 'DownloadIcon' },
+            { name: 'EditIcon' },
+            { name: 'ExportIcon' },
+            { name: 'FaqsIcon' },
+            { name: 'ImportIcon' },
+            { name: 'PrintIcon' },
+            { name: 'SaveIcon' },
+            { name: 'ShareIcon' },
+            { name: 'SynchronizeIcon' },
+            { name: 'UploadIcon' },
+        ],
     },
     {
         title: 'Reservas',
         description: 'Iconos para sistema de reservas y booking',
         icons: [
+            { name: 'AvailableBookingIcon' },
             { name: 'AvailableIcon' },
+            { name: 'CancelledBookingIcon' },
             { name: 'CancelledIcon' },
+            { name: 'CheckInBookingIcon' },
             { name: 'CheckInIcon' },
+            { name: 'CheckOutBookingIcon' },
             { name: 'CheckOutIcon' },
+            { name: 'ConfirmedBookingIcon' },
             { name: 'ConfirmedIcon' },
+            { name: 'GuestsBookingIcon' },
             { name: 'GuestsIcon' },
+            { name: 'PendingBookingIcon' },
             { name: 'PendingIcon' },
+            { name: 'ReserveBookingIcon' },
             { name: 'ReserveIcon' },
+            { name: 'RoomsBookingIcon' },
             { name: 'RoomsIcon' },
+            { name: 'UnavailableBookingIcon' },
             { name: 'UnavailableIcon' },
+        ],
+    },
+    {
+        title: 'Utilidades',
+        description: 'Iconos útiles para aplicaciones y funcionalidades',
+        icons: [
+            { name: 'AudioIcon' },
+            { name: 'CalendarIcon' },
+            { name: 'ColumnIcon' },
+            { name: 'ConfigurationIcon' },
+            { name: 'DateIcon' },
+            { name: 'DocumentIcon' },
+            { name: 'ExcelIcon' },
+            { name: 'FilterIcon' },
+            { name: 'FirstPageIcon' },
+            { name: 'FullscreenIcon' },
+            { name: 'GalleryIcon' },
+            { name: 'LastPageIcon' },
+            { name: 'LoadMoreIcon' },
+            { name: 'LocationIcon' },
+            { name: 'MinimizeIcon' },
+            { name: 'NextIcon' },
+            { name: 'PdfIcon' },
+            { name: 'PreviousIcon' },
+            { name: 'PriceIcon' },
+            { name: 'RefreshIcon' },
+            { name: 'SortIcon' },
+            { name: 'VideoIcon' },
+            { name: 'ZoomInIcon' },
+            { name: 'ZoomOutIcon' },
         ],
     },
     {
@@ -185,6 +402,7 @@ const iconCategories = [
             { name: 'AddIcon' },
             { name: 'AddressIcon' },
             { name: 'AdminIcon' },
+            { name: 'AlertsIcon' },
             { name: 'AlertTriangleIcon' },
             { name: 'BreadcrumbsIcon' },
             { name: 'CloseIcon' },
@@ -198,6 +416,7 @@ const iconCategories = [
             { name: 'HuespedIcon' },
             { name: 'HuespedesIcon' },
             { name: 'LightThemeIcon' },
+            { name: 'LoaderIcon' },
             { name: 'LogoutIcon' },
             { name: 'MapIcon' },
             { name: 'MenuIcon' },
