--- a/apps/web/src/components/common/Slider.astro
+++ b/apps/web/src/components/common/Slider.astro
@@ -1,9 +1,9 @@
 ---
-import type { ImageType } from '@repo/types';
+import type { Image } from '@repo/schemas';
 import { useTranslations, getLangFromUrl } from '@/utils/i18n';
 
 interface Props {
-    images: ImageType[];
+    images: Image[];
     class?: string;
 }
 
