--- a/apps/web/src/components/accommodations/AccommodationGallery.astro
+++ b/apps/web/src/components/accommodations/AccommodationGallery.astro
@@ -1,12 +1,12 @@
 ---
 import Slider from '@/components/common/Slider.astro';
-import { ImageType } from '@repo/types';
+import { Image } from '@repo/schemas';
 
 // import 'keen-slider/keen-slider.min.css';
 // import { useKeenSlider } from 'keen-slider/react';
 
 interface Props {
-    images: ImageType[];
+    images: Image[];
 }
 
 const { images } = Astro.props;
